--- a/app/UI/main.kv
+++ b/app/UI/main.kv
@@ -9,61 +9,66 @@
 	row_force_default: True
 
 <main>:
-	AnchorLayout:
+	BoxLayout:
+		id: main_win
+		orientation: "vertical"
+		spacing: 10
+		space_x: self.size[0]/8
 		#height: 100
-		Label:
-			anchor_x: 'left'
-			anchor_y:  'top'
-			text: '[b]FCS[/b]\n[color=#ff0099]VAL[/color]'
-			markup: True
-			font_size: '12pt'
-			#width: 20
-			size_hint: 0.05,0.05
-		Label:
-			anchor_x: 'right'
-			anchor_y: 'top'
-			text: '[b]Teensy Flight Computer[/b]'
-			markup: True
-			font_size: '20pt'
-			size_hint: 0.05,0.05
- 	#name: 'main'
-	GridLayout:
-		Button:
-			text: 'Control Panel'
-			background_color: Color('#3498DB')
-			on_press: app.stop()
-			#size_hint: 0.2,0.1
-
-		GridLayout:
-			Button:
-				text: 'Graph 1'
-				background_color: Color('#1ABC9C')
-				on_press: root.open_graph()
-				#size_hint: 0.2,0.1
-			Button:
-				text: 'Graph 2'
-				background_color: Color('#2ECC71')
-				on_press: app.stop()
-				#size_hint: 0.2,0.1
-			Button:
-				text: 'Graph 3'
-				background_color: Color('#27AE60')
-				on_press: app.stop()
-				#size_hint: 0.2,0.1
-
-			Button:
-				text: 'Graph 4'
-				background_color: Color('#16A085')
-				on_press: app.stop()
-				#size_hint: 0.2,0.1
-
-		Button:
-			text: 'Logger'
-			background_color: Color('#E74C3C')
-			on_press: app.stop()
-			#size_hint: 0.2,0.1
-		Button:
-			text: 'Disconnect'
-			background_color: Color('#95A5A6')
-			on_press: app.stop()
-			#size_hint: 0.2,0.1
+		BoxLayout:
+			size_hint_y: None
+			height: 50
+			Label:
+				text: '[b]FCS[/b]\n[b][color=#ff0099]VAL[/color][/b]'
+				markup: True
+				font_size: '12pt'
+				#width: 20
+				size_hint_x: .05
+			Label:
+				text: '[b]Teensy Flight Computer[/b]'
+				markup: True
+				font_size: '20pt'
+				size_hint_x: .95
+	
+		BoxLayout:
+			orientation: 'horizontal'
+			padding: 10 , 5
+			BoxLayout:
+				orientation: 'vertical'
+				size_hint_x: .05
+				padding: 1,1
+				Button:
+					text: 'btn1'
+				Button:
+					text: 'btn2'
+				Button:
+					text: 'btn3'
+				Button:
+					text: 'btn4'
+			BoxLayout:
+				orientation: 'vertical'
+				size_hint_x: .4
+				Button:
+					size_y: .65
+					text: 'ControlPanel'
+				Button:
+					text: ' Logger'
+					size_hint_y: .3
+			BoxLayout:
+				size_hint_x: .1
+				Button:
+					text: 'Graph\nPanel'
+			BoxLayout:
+				size_hint_x: .35
+				orientation: 'vertical'
+				Button:
+					text: 'Graph 1'
+					background_color: Color('#1ABC9C')
+					on_press: root.open_graph()
+					#size_hint: 0.2,0.1
+				Button:
+					text: 'Graph 2'
+					background_color: Color('#2ECC71')
+					on_press: app.stop()
+					#size_hint: 0.2,0.1
+			
