--- a/app/UI/main.kv
+++ b/app/UI/main.kv
@@ -15,36 +15,15 @@
 		spacing: 10
 		space_x: self.size[0]/8
 		#height: 100
-		BoxLayout:
-			size_hint_y: None
-			height: 50
-			Label:
-				text: '[b]FCS[/b]\n[b][color=#ff0099]VAL[/color][/b]'
-				markup: True
-				font_size: '12pt'
-				#width: 20
-				size_hint_x: .05
-			Label:
-				text: '[b]Teensy Flight Computer[/b]'
-				markup: True
-				font_size: '20pt'
-				size_hint_x: .95
-	
+		Header: 
+			
 		BoxLayout:
 			orientation: 'horizontal'
 			padding: 10 , 5
-			BoxLayout:
-				orientation: 'vertical'
-				size_hint_x: .05
-				padding: 1,1
-				Button:
-					text: 'btn1'
-				Button:
-					text: 'btn2'
-				Button:
-					text: 'btn3'
-				Button:
-					text: 'btn4'
+			
+			# THERE WE HAVE THE SIDEBAR WIDGET TO BE STORED
+			Sidebar:
+			
 			BoxLayout:
 				orientation: 'vertical'
 				size_hint_x: .4
@@ -54,10 +33,7 @@
 				Button:
 					text: ' Logger'
 					size_hint_y: .3
-			BoxLayout:
-				size_hint_x: .1
-				Button:
-					text: 'Graph\nPanel'
+			GraphPanel:					#THERE WE HAVE THE GRAPHPANEL
 			BoxLayout:
 				size_hint_x: .35
 				orientation: 'vertical'
