--- a/app/UI/main.kv
+++ b/app/UI/main.kv
@@ -25,10 +25,10 @@
 			BoxLayout:
 				orientation: 'vertical'
 				size_hint_x: .4
-				Button:
+				MDCard:
 					size_y: .65
 					text: 'ControlPanel'
-				Button:
+				MDCard:
 					text: ' Logger'
 					size_hint_y: .3
 			GraphPanel:									# HERE WE HAVE THE GRAPHPANEL WIDGET
