--- a/app/UI/mdmain.kv
+++ b/app/UI/mdmain.kv
@@ -7,29 +7,9 @@ BoxLayout:
 		md_bg_color: app.theme_cls.bg_dark
 	BoxLayout:
 		orientation: 'horizontal'
-		size_hint_x: .9
-		MDCard:
-			orientation: 'vertical'
-			size_hint_x: .05
-			spacing: 5
-			Label:
-				text: ""
-				size_hint_y: .05
-			Button:
-				text: "1"
-				size_hint_y: .1   
-				halign: "center"
-			Button:
-				text: "2"
-				size_hint_y: .1 
-				halign: "center"
-			Button:
-				text: "3"
-				size_hint_y: .1
-				halign: "center"
-			Label:
-				text: ""
-		
+		size_hint_y: .9
+		Sidebar:
+			size_hint_x: .05	
 		BoxLayout:
 			orientation: 'vertical'
 			size_hint_x: .65
@@ -77,44 +57,25 @@ BoxLayout:
 			text: "Log"
 			halign: "center"
 
-<GraphProperties>:
+<Sidebar>:
 	MDCard:
-		radius: [20,10,20,10]
-		BoxLayout:
-			orientation: 'vertical'
-			MDToolbar:
-				title: 'graph properties'
-				md_bg_color: color("#FF0066")
-<Logger>:
-	MDCard:
-		#size_hint_y: .25
-		md_bg_color: app.theme_cls.bg_darkest
-		radius: [20,10,20,10]
-		BoxLayout:
-			orientation: "vertical"
-			MDToolbar:
-				title: "Logger"
-				size_hint_y: .1
-				md_bg_color: color("#FF0066")
-			Label:
-				text: "Logger"
-				size_hint_y: .8
-				halign: "center"
-<ControlPanel>:
-	MDCard:
-		#size_hint_y: .85
-		md_bg_color: app.theme_cls.bg_darkest
-		radius: [20,10,20,10]
-		BoxLayout:
-			orientation: "vertical"
-			MDToolbar:
-				title: "Behaviours"
-				size_hint_y: .1
-				md_bg_color: color("#FF0066")
-			Label:
-				text: "ControlPanel"
-				size_hint_y: .9
-				halign: "center"
-
-
-			
+		orientation: 'vertical'
+		size_hint_x: .05
+		spacing: 5
+		Label:
+			text: ""
+			size_hint_y: .05
+		Button:
+			text: "1"
+			size_hint_y: .1   
+			halign: "center"
+		Button:
+			text: "2"
+			size_hint_y: .1 
+			halign: "center"
+		Button:
+			text: "3"
+			size_hint_y: .1
+			halign: "center"
+		Label:
+			text: ""
