Added Code Editor

--- a/app/UI/Components/controlpanel.kv
+++ b/app/UI/Components/controlpanel.kv
@@ -9,7 +9,10 @@
 				title: "Behaviours"
 				size_hint_y: .1
 				md_bg_color: color("#FF0066")
-			Label:
-				text: "ControlPanel"
+			CodeInput:
+				text: "#Enter Behaviours Here"
 				size_hint_y: .9
-				halign: "center"
+				#background_color: color("#000000")
+				style_name: 'inkpot'			#paraiso-dark,inkpot,vim,native
+				#color: color("#FFFFFF")
+				#halign: "center"
